kubernetes/apps/default/openwebui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: default
  labels:
    app: openwebui
  annotations:
    external-dns.alpha.kubernetes.io/hostname: openwebui.torquasmvo.internal
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.241
  selector:
    app: openwebui
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
