kubernetes/apps/default/openwebui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chat.torquasmvo.com`)
      kind: Rule
      services:
        - name: openwebui
          namespace: default
          port: 80
  tls:
    secretName: traefik-dashboard-tls
